# cmake-vcpkg-template

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp
